--- a/views/index.jade
+++ b/views/index.jade
@@ -7,6 +7,7 @@ html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko")
 
     title DualRTC - Dual Monitor System based WebRTC
 
+    link(rel='shortcut icon', type='image/x-icon', href='http://www.example.com/favicon.ico')
     link(rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css")
     link(rel="stylesheet" type="text/css" href="css/style.css")
     link(rel="stylesheet" type="text/css" href="css/nprogress.css")
