--- a/views/index.jade
+++ b/views/index.jade
@@ -51,7 +51,7 @@ html(xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko")
               button.btn.btn-success#btnMakeRoom(title="Create your name")
                 span.glyphicon.glyphicon-log-in
 
-      div.panel.panel-info(id="divJoinRoom" style="display:block")
+      div.panel.panel-info#divJoinRoom(style="display:block")
         div.panel-heading
           span.glyphicon.glyphicon-home
           |  Join the room
